change dir name.

--- a/test.html
+++ b/test.html
@@ -1,6 +1,9 @@
 <html>
 <head>
   <script type="text/javascript" src="build/build.js"></script>
+  <script type="text/javascript">
+    var validator = require('validator');
+  </script>
   <title></title>
 </head>
 <body>
